--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nestjs/core": "9.4.0",
     "@nestjs/platform-express": "9.4.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "9.3.0",
